# bevy-game

./: Cargo.toml  README.md
src/: main.rs  vars.rs
src/common/: components.rs
src/core/: state_machine.rs
src/plugins/: camera.rs  debug.rs  mod.rs  player.rs
src/plugins/animation/: components.rs  mod.rs  plugin.rs  systems.rs  traits.rs
src/plugins/camera/: mod.rs  plugin.rs  systems.rs
src/plugins/coordinator/: components.rs  mod.rs  plugin.rs  vars.rs
src/plugins/coordinator/enemies/: components.rs  mod.rs  plugin.rs  systems.rs  vars.rs
src/plugins/coordinator/enemies/impls/: components.rs
src/plugins/core/: components.rs  mod.rs  plugin.rs  systems.rs  traits.rs
src/plugins/debug/: components.rs  mod.rs  plugin.rs  systems.rs
src/plugins/input/: event.rs  mod.rs  plugin.rs  systems.rs
src/plugins/player/: component_impls.rs  components.rs  events.rs  mod.rs  plugin.rs  state.rs  states.rs  systems.rs  vars.rs
src/plugins/player/components/: components.rs  mod.rs  player.rs
src/plugins/player/impls/: components.rs
src/plugins/resource_manager/: components.rs  mod.rs  plugin.rs
src/plugins/world/: components.rs  mod.rs  plugin.rs  systems.rs  vars.rs
