[package]
name = "learn_game"
version = "0.1.0"
authors = ["lkuoch <lkuoch@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier.git", features = [ "simd-stable", "parallel" ] }
rand = { git = "https://github.com/rust-random/rand.git" }
