[package]
name = "learn_game"
version = "0.1.0"
authors = ["lkuoch <lkuoch@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.6.1" }
heron = { version = "2.2.0", features = ["2d"] }
